--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@ body{background-color: #f5f5f5}
 	padding: 0 15px;
 }
 .translate_main>textarea{
-	height: 160px;
+	height: 100px;
 	width: 100%;
 	display: block;
 	padding: 10px;
@@ -34,6 +34,7 @@ body{background-color: #f5f5f5}
 }
 .result>.translation{
 	margin-bottom: 10px;
+	width: 100%;
 }
 .result>.translation>.translation_main,
 .result>.phrase>.phrase_main
